tests/negative/test_data_member_name_taken.orb
data Foo {
    i32 x;
    bool x;
}

fnc main() {}